docs/generated/2.0-b2/Index.md
Index
=====
### Letters
 * [A](#a)
 * [B](#b)
 * [C](#c)
 * [D](#d)
 * [E](#e)
 * [F](#f)
 * [G](#g)
 * [H](#h)
 * [I](#i)
 * [L](#l)
 * [M](#m)
 * [N](#n)
 * [O](#o)
 * [P](#p)
 * [Q](#q)
 * [R](#r)
 * [S](#s)
 * [T](#t)
 * [U](#u)
 * [V](#v)
 * [W](#w)
 * [Y](#y)



### A

- [`Archive`](Piwik/Archive.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`ArchiveProcessor`](Piwik/ArchiveProcessor.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`aggregateDataTableReports()`](Piwik/ArchiveProcessor/Period.md#aggregateDataTableReports) &mdash; _Method in class_ [`Period`](Piwik/ArchiveProcessor/Period.md)
- [`aggregateNumericMetrics()`](Piwik/ArchiveProcessor/Period.md#aggregateNumericMetrics) &mdash; _Method in class_ [`Period`](Piwik/ArchiveProcessor/Period.md)
- [`applyQueuedFilters()`](Piwik/DataTable.md#applyQueuedFilters) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addDataTable()`](Piwik/DataTable.md#addDataTable) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRow()`](Piwik/DataTable.md#addRow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addSummaryRow()`](Piwik/DataTable.md#addSummaryRow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRowFromArray()`](Piwik/DataTable.md#addRowFromArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRowFromSimpleArray()`](Piwik/DataTable.md#addRowFromSimpleArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRowsFromSerializedArray()`](Piwik/DataTable.md#addRowsFromSerializedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRowsFromArray()`](Piwik/DataTable.md#addRowsFromArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`addRowsFromSimpleArray()`](Piwik/DataTable.md#addRowsFromSimpleArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`AddSummaryRow`](Piwik/DataTable/Filter/AddSummaryRow.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`appendPercentSign()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#appendPercentSign) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
- [`addSummaryRow()`](Piwik/DataTable/Filter/Truncate.md#addSummaryRow) &mdash; _Method in class_ [`Truncate`](Piwik/DataTable/Filter/Truncate.md)
- [`applyQueuedFilters()`](Piwik/DataTable/Map.md#applyQueuedFilters) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`addTable()`](Piwik/DataTable/Map.md#addTable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`addDataTable()`](Piwik/DataTable/Map.md#addDataTable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`addSubtable()`](Piwik/DataTable/Row.md#addSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`addColumn()`](Piwik/DataTable/Row.md#addColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`addColumns()`](Piwik/DataTable/Row.md#addColumns) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`addMetadata()`](Piwik/DataTable/Row.md#addMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`addRowsFromArray()`](Piwik/DataTable/Simple.md#addRowsFromArray) &mdash; _Method in class_ [`Simple`](Piwik/DataTable/Simple.md)
- [`adjustForTimezone()`](Piwik/Date.md#adjustForTimezone) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`addDay()`](Piwik/Date.md#addDay) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`addHour()`](Piwik/Date.md#addHour) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`addHourTo()`](Piwik/Date.md#addHourTo) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`addPeriod()`](Piwik/Date.md#addPeriod) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`add()`](Piwik/Menu/MenuAbstract.md#add) &mdash; _Method in class_ [`MenuAbstract`](Piwik/Menu/MenuAbstract.md)
- [`addEntry()`](Piwik/Menu/MenuAdmin.md#addEntry) &mdash; _Method in class_ [`MenuAdmin`](Piwik/Menu/MenuAdmin.md)
- [`addEntry()`](Piwik/Menu/MenuTop.md#addEntry) &mdash; _Method in class_ [`MenuTop`](Piwik/Menu/MenuTop.md)
- [`advancedFactory()`](Piwik/Period.md#advancedFactory) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`addAction()`](Piwik/Piwik.md#addAction) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`activate()`](Piwik/Plugin.md#activate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`API`](Piwik/Plugin/API.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
- [`Archiver`](Piwik/Plugin/Archiver.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
- [`archiveDay()`](Piwik/Plugin/Archiver.md#archiveDay) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
- [`archivePeriod()`](Piwik/Plugin/Archiver.md#archivePeriod) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
- [`assignTemplateVar()`](Piwik/Plugin/Visualization.md#assignTemplateVar) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
- [`afterGenericFiltersAreAppliedToLoadedDataTable()`](Piwik/Plugin/Visualization.md#afterGenericFiltersAreAppliedToLoadedDataTable) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
- [`afterAllFilteresAreApplied()`](Piwik/Plugin/Visualization.md#afterAllFilteresAreApplied) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
- [`addLabelColumn()`](Piwik/RankingQuery.md#addLabelColumn) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`addColumn()`](Piwik/RankingQuery.md#addColumn) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`addForm()`](Piwik/View.md#addForm) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`assign()`](Piwik/View.md#assign) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`add()`](Piwik/WidgetsList.md#add) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)

### B

- [`build()`](Piwik/Archive.md#build) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`beautify()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#beautify) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
- [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`beforeLoadDataTable()`](Piwik/Plugin/Visualization.md#beforeLoadDataTable) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
- [`beforeGenericFiltersAreAppliedToLoadedDataTable()`](Piwik/Plugin/Visualization.md#beforeGenericFiltersAreAppliedToLoadedDataTable) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
- [`beforeRender()`](Piwik/Plugin/Visualization.md#beforeRender) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
- [`build()`](Piwik/ViewDataTable/Factory.md#build) &mdash; _Method in class_ [`Factory`](Piwik/ViewDataTable/Factory.md)

### C

- [`Common`](Piwik/Common.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`Config`](Piwik/Config.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`calculate()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#calculate) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
- [`ColumnCallbackAddColumn`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`ColumnCallbackAddColumnPercentage`](Piwik/DataTable/Filter/ColumnCallbackAddColumnPercentage.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`ColumnCallbackAddColumnQuotient`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`ColumnCallbackAddMetadata`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`ColumnCallbackDeleteRow`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`ColumnDelete`](Piwik/DataTable/Filter/ColumnDelete.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`$c()`](Piwik/DataTable/Row.md#$c) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
- [`cleanPostSerialize()`](Piwik/DataTable/Row.md#cleanPostSerialize) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`compareElements()`](Piwik/DataTable/Row.md#compareElements) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`compareWeek()`](Piwik/Date.md#compareWeek) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`compareMonth()`](Piwik/Date.md#compareMonth) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`createDatabaseObject()`](Piwik/Db.md#createDatabaseObject) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`copy()`](Piwik/Filesystem.md#copy) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
- [`copyRecursive()`](Piwik/Filesystem.md#copyRecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
- [`clearCache()`](Piwik/Option.md#clearCache) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
- [`checkUserIsSuperUserOrTheUser()`](Piwik/Piwik.md#checkUserIsSuperUserOrTheUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserIsNotAnonymous()`](Piwik/Piwik.md#checkUserIsNotAnonymous) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserIsSuperUser()`](Piwik/Piwik.md#checkUserIsSuperUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserHasAdminAccess()`](Piwik/Piwik.md#checkUserHasAdminAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserHasSomeAdminAccess()`](Piwik/Piwik.md#checkUserHasSomeAdminAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserHasViewAccess()`](Piwik/Piwik.md#checkUserHasViewAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`checkUserHasSomeViewAccess()`](Piwik/Piwik.md#checkUserHasSomeViewAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`Controller`](Piwik/Plugin/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
- [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
- [`$config()`](Piwik/Plugin/ViewDataTable.md#$config) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`canDisplayViewDataTable()`](Piwik/Plugin/ViewDataTable.md#canDisplayViewDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`Controller`](Piwik/Plugins/API/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\API`](Piwik/Plugins/API)
- [`Controller`](Piwik/Plugins/Actions/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Actions`](Piwik/Plugins/Actions)
- [`Controller`](Piwik/Plugins/Annotations/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Annotations`](Piwik/Plugins/Annotations)
- [`Controller`](Piwik/Plugins/CoreAdminHome/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CoreAdminHome`](Piwik/Plugins/CoreAdminHome)
- [`Controller`](Piwik/Plugins/CoreHome/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CoreHome`](Piwik/Plugins/CoreHome)
- [`Controller`](Piwik/Plugins/CorePluginsAdmin/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CorePluginsAdmin`](Piwik/Plugins/CorePluginsAdmin)
- [`Controller`](Piwik/Plugins/CoreUpdater/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CoreUpdater`](Piwik/Plugins/CoreUpdater)
- [`Controller`](Piwik/Plugins/CustomVariables/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\CustomVariables`](Piwik/Plugins/CustomVariables)
- [`Controller`](Piwik/Plugins/DBStats/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\DBStats`](Piwik/Plugins/DBStats)
- [`Controller`](Piwik/Plugins/Dashboard/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Dashboard`](Piwik/Plugins/Dashboard)
- [`Controller`](Piwik/Plugins/DevicesDetection/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\DevicesDetection`](Piwik/Plugins/DevicesDetection)
- [`Controller`](Piwik/Plugins/ExamplePluginTemplate/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ExamplePluginTemplate`](Piwik/Plugins/ExamplePluginTemplate)
- [`Controller`](Piwik/Plugins/ExamplePlugin/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ExamplePlugin`](Piwik/Plugins/ExamplePlugin)
- [`Controller`](Piwik/Plugins/ExampleRssWidget/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ExampleRssWidget`](Piwik/Plugins/ExampleRssWidget)
- [`Controller`](Piwik/Plugins/ExampleUI/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ExampleUI`](Piwik/Plugins/ExampleUI)
- [`Controller`](Piwik/Plugins/Feedback/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Feedback`](Piwik/Plugins/Feedback)
- [`Controller`](Piwik/Plugins/Goals/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Goals`](Piwik/Plugins/Goals)
- [`Controller`](Piwik/Plugins/ImageGraph/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ImageGraph`](Piwik/Plugins/ImageGraph)
- [`Controller`](Piwik/Plugins/Installation/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Installation`](Piwik/Plugins/Installation)
- [`Controller`](Piwik/Plugins/LanguagesManager/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\LanguagesManager`](Piwik/Plugins/LanguagesManager)
- [`Controller`](Piwik/Plugins/Live/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Live`](Piwik/Plugins/Live)
- [`Controller`](Piwik/Plugins/Login/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Login`](Piwik/Plugins/Login)
- [`Controller`](Piwik/Plugins/MobileMessaging/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\MobileMessaging`](Piwik/Plugins/MobileMessaging)
- [`Controller`](Piwik/Plugins/MultiSites/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\MultiSites`](Piwik/Plugins/MultiSites)
- [`Controller`](Piwik/Plugins/Overlay/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Overlay`](Piwik/Plugins/Overlay)
- [`Controller`](Piwik/Plugins/PrivacyManager/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\PrivacyManager`](Piwik/Plugins/PrivacyManager)
- [`Controller`](Piwik/Plugins/Provider/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Provider`](Piwik/Plugins/Provider)
- [`Controller`](Piwik/Plugins/Proxy/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Proxy`](Piwik/Plugins/Proxy)
- [`Controller`](Piwik/Plugins/Referrers/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Referrers`](Piwik/Plugins/Referrers)
- [`Controller`](Piwik/Plugins/SEO/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\SEO`](Piwik/Plugins/SEO)
- [`Controller`](Piwik/Plugins/ScheduledReports/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\ScheduledReports`](Piwik/Plugins/ScheduledReports)
- [`Controller`](Piwik/Plugins/SegmentEditor/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\SegmentEditor`](Piwik/Plugins/SegmentEditor)
- [`Controller`](Piwik/Plugins/SitesManager/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\SitesManager`](Piwik/Plugins/SitesManager)
- [`Controller`](Piwik/Plugins/Transitions/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Transitions`](Piwik/Plugins/Transitions)
- [`Controller`](Piwik/Plugins/UserCountryMap/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\UserCountryMap`](Piwik/Plugins/UserCountryMap)
- [`Controller`](Piwik/Plugins/UserCountry/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\UserCountry`](Piwik/Plugins/UserCountry)
- [`Controller`](Piwik/Plugins/UserSettings/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\UserSettings`](Piwik/Plugins/UserSettings)
- [`Controller`](Piwik/Plugins/UsersManager/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\UsersManager`](Piwik/Plugins/UsersManager)
- [`Controller`](Piwik/Plugins/VisitFrequency/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\VisitFrequency`](Piwik/Plugins/VisitFrequency)
- [`Controller`](Piwik/Plugins/VisitTime/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\VisitTime`](Piwik/Plugins/VisitTime)
- [`Controller`](Piwik/Plugins/VisitorInterest/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\VisitorInterest`](Piwik/Plugins/VisitorInterest)
- [`Controller`](Piwik/Plugins/VisitsSummary/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\VisitsSummary`](Piwik/Plugins/VisitsSummary)
- [`Controller`](Piwik/Plugins/Widgetize/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugins\Widgetize`](Piwik/Plugins/Widgetize)
- [`$className()`](Piwik/ScheduledTask.md#$className) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`clearCache()`](Piwik/Site.md#clearCache) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`clearCompiledTemplates()`](Piwik/View.md#clearCompiledTemplates) &mdash; _Method in class_ [`View`](Piwik/View.md)

### D

- [`Day`](Piwik/ArchiveProcessor/Day.md) &mdash; _Class in namespace_ [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
- [`destroy()`](Piwik/Common.md#destroy) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`DataTable`](Piwik/DataTable.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`deleteColumn()`](Piwik/DataTable.md#deleteColumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`deleteColumns()`](Piwik/DataTable.md#deleteColumns) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`deleteRow()`](Piwik/DataTable.md#deleteRow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`deleteRowsOffset()`](Piwik/DataTable.md#deleteRowsOffset) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`deleteRows()`](Piwik/DataTable.md#deleteRows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`deleteColumns()`](Piwik/DataTable/Map.md#deleteColumns) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`deleteRow()`](Piwik/DataTable/Map.md#deleteRow) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`deleteColumn()`](Piwik/DataTable/Map.md#deleteColumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`deleteColumn()`](Piwik/DataTable/Row.md#deleteColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`deleteMetadata()`](Piwik/DataTable/Row.md#deleteMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`Date`](Piwik/Date.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`Db`](Piwik/Db.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`deleteAllRows()`](Piwik/Db.md#deleteAllRows) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`dropTables()`](Piwik/Db.md#dropTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`dispatch()`](Piwik/FrontController.md#dispatch) &mdash; _Method in class_ [`FrontController`](Piwik/FrontController.md)
- [`downloadChunk()`](Piwik/Http.md#downloadChunk) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
- [`debug()`](Piwik/Log.md#debug) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
- [`discardNonce()`](Piwik/Nonce.md#discardNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
- [`delete()`](Piwik/Option.md#delete) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
- [`deleteLike()`](Piwik/Option.md#deleteLike) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
- [`deactivate()`](Piwik/Plugin.md#deactivate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`displayWarningIfConfigFileNotWritable()`](Piwik/Plugin/ControllerAdmin.md#displayWarningIfConfigFileNotWritable) &mdash; _Method in class_ [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md)
- [`Daily`](Piwik/ScheduledTime/Daily.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)

### E

- [`enableRecursiveSort()`](Piwik/DataTable.md#enableRecursiveSort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`enableRecursiveFilters()`](Piwik/DataTable.md#enableRecursiveFilters) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`enableRecursive()`](Piwik/DataTable/Filter.md#enableRecursive) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
- [`ExcludeLowPopulation`](Piwik/DataTable/Filter/ExcludeLowPopulation.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`enableRecursiveSort()`](Piwik/DataTable/Map.md#enableRecursiveSort) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`exec()`](Piwik/Db.md#exec) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`error()`](Piwik/Log.md#error) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
- [`execute()`](Piwik/RankingQuery.md#execute) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)

### F

- [`factory()`](Piwik/Archive.md#factory) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`forceSave()`](Piwik/Config.md#forceSave) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
- [`filter()`](Piwik/DataTable.md#filter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`fromSerializedArray()`](Piwik/DataTable.md#fromSerializedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`Filter`](Piwik/DataTable/Filter.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
- [`filter()`](Piwik/DataTable/Filter.md#filter) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
- [`filterSubTable()`](Piwik/DataTable/Filter.md#filterSubTable) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
- [`filter()`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md#filter) &mdash; _Method in class_ [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md)
- [`filter()`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md#filter) &mdash; _Method in class_ [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md)
- [`filter()`](Piwik/DataTable/Filter/AddSummaryRow.md#filter) &mdash; _Method in class_ [`AddSummaryRow`](Piwik/DataTable/Filter/AddSummaryRow.md)
- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md#filter) &mdash; _Method in class_ [`ColumnCallbackAddColumn`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md)
- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md#filter) &mdash; _Method in class_ [`ColumnCallbackAddColumnQuotient`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md)
- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md#filter) &mdash; _Method in class_ [`ColumnCallbackAddMetadata`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md)
- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md#filter) &mdash; _Method in class_ [`ColumnCallbackDeleteRow`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md)
- [`filter()`](Piwik/DataTable/Filter/ColumnDelete.md#filter) &mdash; _Method in class_ [`ColumnDelete`](Piwik/DataTable/Filter/ColumnDelete.md)
- [`filter()`](Piwik/DataTable/Filter/ExcludeLowPopulation.md#filter) &mdash; _Method in class_ [`ExcludeLowPopulation`](Piwik/DataTable/Filter/ExcludeLowPopulation.md)
- [`filter()`](Piwik/DataTable/Filter/GroupBy.md#filter) &mdash; _Method in class_ [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md)
- [`filter()`](Piwik/DataTable/Filter/Limit.md#filter) &mdash; _Method in class_ [`Limit`](Piwik/DataTable/Filter/Limit.md)
- [`filter()`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md#filter) &mdash; _Method in class_ [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md)
- [`filter()`](Piwik/DataTable/Filter/Pattern.md#filter) &mdash; _Method in class_ [`Pattern`](Piwik/DataTable/Filter/Pattern.md)
- [`filter()`](Piwik/DataTable/Filter/PatternRecursive.md#filter) &mdash; _Method in class_ [`PatternRecursive`](Piwik/DataTable/Filter/PatternRecursive.md)
- [`filter()`](Piwik/DataTable/Filter/ReplaceColumnNames.md#filter) &mdash; _Method in class_ [`ReplaceColumnNames`](Piwik/DataTable/Filter/ReplaceColumnNames.md)
- [`filter()`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md#filter) &mdash; _Method in class_ [`ReplaceSummaryRowLabel`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md)
- [`filter()`](Piwik/DataTable/Filter/Sort.md#filter) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`filter()`](Piwik/DataTable/Filter/Truncate.md#filter) &mdash; _Method in class_ [`Truncate`](Piwik/DataTable/Filter/Truncate.md)
- [`filter()`](Piwik/DataTable/Map.md#filter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`factory()`](Piwik/Date.md#factory) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`fetchAll()`](Piwik/Db.md#fetchAll) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`fetchRow()`](Piwik/Db.md#fetchRow) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`fetchOne()`](Piwik/Db.md#fetchOne) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`fetchAssoc()`](Piwik/Db.md#fetchAssoc) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`Filesystem`](Piwik/Filesystem.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`FrontController`](Piwik/FrontController.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`fetchDispatch()`](Piwik/FrontController.md#fetchDispatch) &mdash; _Method in class_ [`FrontController`](Piwik/FrontController.md)
- [`fetchRemoteFile()`](Piwik/Http.md#fetchRemoteFile) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
- [`factory()`](Piwik/Period.md#factory) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`Factory`](Piwik/ViewDataTable/Factory.md) &mdash; _Class in namespace_ [`Piwik\ViewDataTable`](Piwik/ViewDataTable)

### G

- [`getRequestArrayFromString()`](Piwik/API/Request.md#getRequestArrayFromString) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getClassNameAPI()`](Piwik/API/Request.md#getClassNameAPI) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getRequestParametersGET()`](Piwik/API/Request.md#getRequestParametersGET) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getBaseReportUrl()`](Piwik/API/Request.md#getBaseReportUrl) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getCurrentUrlWithoutGenericFilters()`](Piwik/API/Request.md#getCurrentUrlWithoutGenericFilters) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getRawSegmentFromRequest()`](Piwik/API/Request.md#getRawSegmentFromRequest) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`getNumeric()`](Piwik/Archive.md#getNumeric) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getBlob()`](Piwik/Archive.md#getBlob) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getDataTableFromNumeric()`](Piwik/Archive.md#getDataTableFromNumeric) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getDataTable()`](Piwik/Archive.md#getDataTable) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getDataTableExpanded()`](Piwik/Archive.md#getDataTableExpanded) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getRequestedPlugins()`](Piwik/Archive.md#getRequestedPlugins) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getDataTableFromArchive()`](Piwik/Archive.md#getDataTableFromArchive) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getParams()`](Piwik/Archive.md#getParams) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getPluginForReport()`](Piwik/Archive.md#getPluginForReport) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
- [`getLogAggregator()`](Piwik/ArchiveProcessor.md#getLogAggregator) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`getPeriod()`](Piwik/ArchiveProcessor.md#getPeriod) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`getSite()`](Piwik/ArchiveProcessor.md#getSite) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`getSegment()`](Piwik/ArchiveProcessor.md#getSegment) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`getDataTableFromDataArray()`](Piwik/ArchiveProcessor/Day.md#getDataTableFromDataArray) &mdash; _Method in class_ [`Day`](Piwik/ArchiveProcessor/Day.md)
- [`getMetricsForDimension()`](Piwik/ArchiveProcessor/Day.md#getMetricsForDimension) &mdash; _Method in class_ [`Day`](Piwik/ArchiveProcessor/Day.md)
- [`getRequestVar()`](Piwik/Common.md#getRequestVar) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`getLanguagesList()`](Piwik/Common.md#getLanguagesList) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`getLanguageToCountryList()`](Piwik/Common.md#getLanguageToCountryList) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`getSqlStringFieldsArray()`](Piwik/Common.md#getSqlStringFieldsArray) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`getSortedByColumnName()`](Piwik/DataTable.md#getSortedByColumnName) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowFromLabel()`](Piwik/DataTable.md#getRowFromLabel) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowIdFromLabel()`](Piwik/DataTable.md#getRowIdFromLabel) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getEmptyClone()`](Piwik/DataTable.md#getEmptyClone) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowFromId()`](Piwik/DataTable.md#getRowFromId) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowFromIdSubDataTable()`](Piwik/DataTable.md#getRowFromIdSubDataTable) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getId()`](Piwik/DataTable.md#getId) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRows()`](Piwik/DataTable.md#getRows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getColumn()`](Piwik/DataTable.md#getColumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getColumnsStartingWith()`](Piwik/DataTable.md#getColumnsStartingWith) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getColumns()`](Piwik/DataTable.md#getColumns) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowsMetadata()`](Piwik/DataTable.md#getRowsMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowsCount()`](Piwik/DataTable.md#getRowsCount) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getFirstRow()`](Piwik/DataTable.md#getFirstRow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getLastRow()`](Piwik/DataTable.md#getLastRow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getRowsCountRecursive()`](Piwik/DataTable.md#getRowsCountRecursive) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getSerialized()`](Piwik/DataTable.md#getSerialized) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getMetadata()`](Piwik/DataTable.md#getMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getAllTableMetadata()`](Piwik/DataTable.md#getAllTableMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`getSingleUnitLabel()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#getSingleUnitLabel) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
- [`getRangeLabel()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#getRangeLabel) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
- [`getUnboundedLabel()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#getUnboundedLabel) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
- [`getSingleUnitLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getSingleUnitLabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
- [`getRangeLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getRangeLabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
- [`getUnboundedLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getUnboundedLabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
- [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`getPatternQuoted()`](Piwik/DataTable/Filter/Pattern.md#getPatternQuoted) &mdash; _Method in class_ [`Pattern`](Piwik/DataTable/Filter/Pattern.md)
- [`getKeyName()`](Piwik/DataTable/Map.md#getKeyName) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getRowsCount()`](Piwik/DataTable/Map.md#getRowsCount) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getDataTables()`](Piwik/DataTable/Map.md#getDataTables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getTable()`](Piwik/DataTable/Map.md#getTable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getFirstRow()`](Piwik/DataTable/Map.md#getFirstRow) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getColumn()`](Piwik/DataTable/Map.md#getColumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getEmptyClone()`](Piwik/DataTable/Map.md#getEmptyClone) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getMetadataIntersectArray()`](Piwik/DataTable/Map.md#getMetadataIntersectArray) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getColumns()`](Piwik/DataTable/Map.md#getColumns) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`getColumn()`](Piwik/DataTable/Row.md#getColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`getMetadata()`](Piwik/DataTable/Row.md#getMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`getColumns()`](Piwik/DataTable/Row.md#getColumns) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`getIdSubDataTable()`](Piwik/DataTable/Row.md#getIdSubDataTable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`getSubtable()`](Piwik/DataTable/Row.md#getSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`getDatetime()`](Piwik/Date.md#getDatetime) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`getDateStartUTC()`](Piwik/Date.md#getDateStartUTC) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`getDateEndUTC()`](Piwik/Date.md#getDateEndUTC) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`getTimestampUTC()`](Piwik/Date.md#getTimestampUTC) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`getTimestamp()`](Piwik/Date.md#getTimestamp) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`getLocalized()`](Piwik/Date.md#getLocalized) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`get()`](Piwik/Db.md#get) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`getDbLock()`](Piwik/Db.md#getDbLock) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`globr()`](Piwik/Filesystem.md#globr) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
- [`getTransportMethod()`](Piwik/Http.md#getTransportMethod) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
- [`getIPv4FromMappedIPv6()`](Piwik/IP.md#getIPv4FromMappedIPv6) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getIpsForRange()`](Piwik/IP.md#getIpsForRange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getIpFromHeader()`](Piwik/IP.md#getIpFromHeader) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getNonProxyIpFromHeader()`](Piwik/IP.md#getNonProxyIpFromHeader) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getLastIpFromList()`](Piwik/IP.md#getLastIpFromList) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getHostByAddr()`](Piwik/IP.md#getHostByAddr) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`getMenu()`](Piwik/Menu/MenuMain.md#getMenu) &mdash; _Method in class_ [`MenuMain`](Piwik/Menu/MenuMain.md)
- [`getVisitsMetricNames()`](Piwik/Metrics.md#getVisitsMetricNames) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getMappingFromIdToName()`](Piwik/Metrics.md#getMappingFromIdToName) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getUnit()`](Piwik/Metrics.md#getUnit) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getDefaultMetricTranslations()`](Piwik/Metrics.md#getDefaultMetricTranslations) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getDefaultMetrics()`](Piwik/Metrics.md#getDefaultMetrics) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getDefaultProcessedMetrics()`](Piwik/Metrics.md#getDefaultProcessedMetrics) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getDefaultMetricsDocumentation()`](Piwik/Metrics.md#getDefaultMetricsDocumentation) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getPercentVisitColumn()`](Piwik/Metrics.md#getPercentVisitColumn) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`getPrettyNumber()`](Piwik/MetricsFormatter.md#getPrettyNumber) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getPrettyTimeFromSeconds()`](Piwik/MetricsFormatter.md#getPrettyTimeFromSeconds) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getPrettySizeFromBytes()`](Piwik/MetricsFormatter.md#getPrettySizeFromBytes) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getPrettyMoney()`](Piwik/MetricsFormatter.md#getPrettyMoney) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getPrettyValue()`](Piwik/MetricsFormatter.md#getPrettyValue) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getCurrencySymbol()`](Piwik/MetricsFormatter.md#getCurrencySymbol) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getCurrencyList()`](Piwik/MetricsFormatter.md#getCurrencyList) &mdash; _Method in class_ [`MetricsFormatter`](Piwik/MetricsFormatter.md)
- [`getNonce()`](Piwik/Nonce.md#getNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
- [`getOrigin()`](Piwik/Nonce.md#getOrigin) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
- [`getAcceptableOrigins()`](Piwik/Nonce.md#getAcceptableOrigins) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
- [`get()`](Piwik/Option.md#get) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
- [`getDateStart()`](Piwik/Period.md#getDateStart) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getDateEnd()`](Piwik/Period.md#getDateEnd) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getId()`](Piwik/Period.md#getId) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getLabel()`](Piwik/Period.md#getLabel) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getNumberOfSubperiods()`](Piwik/Period.md#getNumberOfSubperiods) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getSubperiods()`](Piwik/Period.md#getSubperiods) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`get()`](Piwik/Period.md#get) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getPrettyString()`](Piwik/Period.md#getPrettyString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getLocalizedShortString()`](Piwik/Period.md#getLocalizedShortString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getLocalizedLongString()`](Piwik/Period.md#getLocalizedLongString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getRangeString()`](Piwik/Period.md#getRangeString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`getLocalizedShortString()`](Piwik/Period/Range.md#getLocalizedShortString) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getLocalizedLongString()`](Piwik/Period/Range.md#getLocalizedLongString) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getDateStart()`](Piwik/Period/Range.md#getDateStart) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getPrettyString()`](Piwik/Period/Range.md#getPrettyString) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getDateEnd()`](Piwik/Period/Range.md#getDateEnd) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getLastDate()`](Piwik/Period/Range.md#getLastDate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getRelativeToEndDate()`](Piwik/Period/Range.md#getRelativeToEndDate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`getCurrentUserEmail()`](Piwik/Piwik.md#getCurrentUserEmail) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`getSuperUserLogin()`](Piwik/Piwik.md#getSuperUserLogin) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`getSuperUserEmail()`](Piwik/Piwik.md#getSuperUserEmail) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`getCurrentUserLogin()`](Piwik/Piwik.md#getCurrentUserLogin) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`getCurrentUserTokenAuth()`](Piwik/Piwik.md#getCurrentUserTokenAuth) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`getInformation()`](Piwik/Plugin.md#getInformation) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`getListHooksRegistered()`](Piwik/Plugin.md#getListHooksRegistered) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`getVersion()`](Piwik/Plugin.md#getVersion) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`getPluginName()`](Piwik/Plugin.md#getPluginName) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`getPluginNameFromBacktrace()`](Piwik/Plugin.md#getPluginNameFromBacktrace) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`getDefaultAction()`](Piwik/Plugin/Controller.md#getDefaultAction) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getCalendarPrettyDate()`](Piwik/Plugin/Controller.md#getCalendarPrettyDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`getThemeEnabled()`](Piwik/Plugin/Manager.md#getThemeEnabled) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`getInstalledPluginsName()`](Piwik/Plugin/Manager.md#getInstalledPluginsName) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`getMissingPlugins()`](Piwik/Plugin/Manager.md#getMissingPlugins) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`getDefaultConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`getDefaultRequestConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultRequestConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`getViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#getViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`getDataTable()`](Piwik/Plugin/ViewDataTable.md#getDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`generateQuery()`](Piwik/RankingQuery.md#generateQuery) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`getObjectInstance()`](Piwik/ScheduledTask.md#getObjectInstance) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getClassName()`](Piwik/ScheduledTask.md#getClassName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getMethodName()`](Piwik/ScheduledTask.md#getMethodName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getMethodParameter()`](Piwik/ScheduledTask.md#getMethodParameter) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getScheduledTime()`](Piwik/ScheduledTask.md#getScheduledTime) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getRescheduledTime()`](Piwik/ScheduledTask.md#getRescheduledTime) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getPriority()`](Piwik/ScheduledTask.md#getPriority) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getName()`](Piwik/ScheduledTask.md#getName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getTaskName()`](Piwik/ScheduledTask.md#getTaskName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`getRescheduledTime()`](Piwik/ScheduledTime/Daily.md#getRescheduledTime) &mdash; _Method in class_ [`Daily`](Piwik/ScheduledTime/Daily.md)
- [`getRescheduledTime()`](Piwik/ScheduledTime/Hourly.md#getRescheduledTime) &mdash; _Method in class_ [`Hourly`](Piwik/ScheduledTime/Hourly.md)
- [`getRescheduledTime()`](Piwik/ScheduledTime/Monthly.md#getRescheduledTime) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
- [`getRescheduledTime()`](Piwik/ScheduledTime/Weekly.md#getRescheduledTime) &mdash; _Method in class_ [`Weekly`](Piwik/ScheduledTime/Weekly.md)
- [`getString()`](Piwik/Segment.md#getString) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
- [`getHash()`](Piwik/Segment.md#getHash) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
- [`getSelectQuery()`](Piwik/Segment.md#getSelectQuery) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
- [`getKnownSegmentsToArchive()`](Piwik/SettingsPiwik.md#getKnownSegmentsToArchive) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
- [`getPiwikUrl()`](Piwik/SettingsPiwik.md#getPiwikUrl) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
- [`getOrder()`](Piwik/Settings/SystemSetting.md#getOrder) &mdash; _Method in class_ [`SystemSetting`](Piwik/Settings/SystemSetting.md)
- [`getOrder()`](Piwik/Settings/UserSetting.md#getOrder) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
- [`getInstance()`](Piwik/Singleton.md#getInstance) &mdash; _Method in class_ [`Singleton`](Piwik/Singleton.md)
- [`getName()`](Piwik/Site.md#getName) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getMainUrl()`](Piwik/Site.md#getMainUrl) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getId()`](Piwik/Site.md#getId) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getCreationDate()`](Piwik/Site.md#getCreationDate) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getTimezone()`](Piwik/Site.md#getTimezone) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getCurrency()`](Piwik/Site.md#getCurrency) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getExcludedIps()`](Piwik/Site.md#getExcludedIps) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getExcludedQueryParameters()`](Piwik/Site.md#getExcludedQueryParameters) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getSearchKeywordParameters()`](Piwik/Site.md#getSearchKeywordParameters) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getSearchCategoryParameters()`](Piwik/Site.md#getSearchCategoryParameters) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getIdSitesFromIdSitesString()`](Piwik/Site.md#getIdSitesFromIdSitesString) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getNameFor()`](Piwik/Site.md#getNameFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getTimezoneFor()`](Piwik/Site.md#getTimezoneFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getCreationDateFor()`](Piwik/Site.md#getCreationDateFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getMainUrlFor()`](Piwik/Site.md#getMainUrlFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getCurrencyFor()`](Piwik/Site.md#getCurrencyFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getExcludedIpsFor()`](Piwik/Site.md#getExcludedIpsFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getExcludedQueryParametersFor()`](Piwik/Site.md#getExcludedQueryParametersFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`getScheduledTimeForMethod()`](Piwik/TaskScheduler.md#getScheduledTimeForMethod) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
- [`getCurrentUrl()`](Piwik/Url.md#getCurrentUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentUrlWithoutQueryString()`](Piwik/Url.md#getCurrentUrlWithoutQueryString) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentUrlWithoutFileName()`](Piwik/Url.md#getCurrentUrlWithoutFileName) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentScriptPath()`](Piwik/Url.md#getCurrentScriptPath) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentScriptName()`](Piwik/Url.md#getCurrentScriptName) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentScheme()`](Piwik/Url.md#getCurrentScheme) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentHost()`](Piwik/Url.md#getCurrentHost) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getCurrentQueryString()`](Piwik/Url.md#getCurrentQueryString) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getArrayFromCurrentQueryString()`](Piwik/Url.md#getArrayFromCurrentQueryString) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getQueryStringFromParameters()`](Piwik/Url.md#getQueryStringFromParameters) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getReferrer()`](Piwik/Url.md#getReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`getQueryStringWithExcludedParameters()`](Piwik/UrlHelper.md#getQueryStringWithExcludedParameters) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
- [`getParseUrlReverse()`](Piwik/UrlHelper.md#getParseUrlReverse) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
- [`getArrayFromQueryString()`](Piwik/UrlHelper.md#getArrayFromQueryString) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
- [`getParameterFromQueryString()`](Piwik/UrlHelper.md#getParameterFromQueryString) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
- [`getPathAndQueryFromUrl()`](Piwik/UrlHelper.md#getPathAndQueryFromUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
- [`getTemplateFile()`](Piwik/View.md#getTemplateFile) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`getTemplateVars()`](Piwik/View.md#getTemplateVars) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`get()`](Piwik/WidgetsList.md#get) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)

### H

- [`Http`](Piwik/Http.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)

### I

- [`insertNumericRecords()`](Piwik/ArchiveProcessor.md#insertNumericRecords) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`insertNumericRecord()`](Piwik/ArchiveProcessor.md#insertNumericRecord) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`insertBlobRecord()`](Piwik/ArchiveProcessor.md#insertBlobRecord) &mdash; _Method in class_ [`ArchiveProcessor`](Piwik/ArchiveProcessor.md)
- [`isEqual()`](Piwik/DataTable.md#isEqual) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`isSubtableLoaded()`](Piwik/DataTable/Row.md#isSubtableLoaded) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`isSummaryRow()`](Piwik/DataTable/Row.md#isSummaryRow) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`isEqual()`](Piwik/DataTable/Row.md#isEqual) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`isLater()`](Piwik/Date.md#isLater) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`isEarlier()`](Piwik/Date.md#isEarlier) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`isToday()`](Piwik/Date.md#isToday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`isLockPrivilegeGranted()`](Piwik/Db.md#isLockPrivilegeGranted) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`IP`](Piwik/IP.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`isIPv4()`](Piwik/IP.md#isIPv4) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`isIPv6()`](Piwik/IP.md#isIPv6) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`isMappedIPv4()`](Piwik/IP.md#isMappedIPv4) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`isIpInRange()`](Piwik/IP.md#isIpInRange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`info()`](Piwik/Log.md#info) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
- [`isUrlFound()`](Piwik/Menu/MenuMain.md#isUrlFound) &mdash; _Method in class_ [`MenuMain`](Piwik/Menu/MenuMain.md)
- [`isLowerValueBetter()`](Piwik/Metrics.md#isLowerValueBetter) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
- [`isMultiplePeriod()`](Piwik/Period.md#isMultiplePeriod) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`isUserIsSuperUserOrTheUser()`](Piwik/Piwik.md#isUserIsSuperUserOrTheUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserIsSuperUser()`](Piwik/Piwik.md#isUserIsSuperUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserIsAnonymous()`](Piwik/Piwik.md#isUserIsAnonymous) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserHasAdminAccess()`](Piwik/Piwik.md#isUserHasAdminAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserHasSomeAdminAccess()`](Piwik/Piwik.md#isUserHasSomeAdminAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserHasViewAccess()`](Piwik/Piwik.md#isUserHasViewAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isUserHasSomeViewAccess()`](Piwik/Piwik.md#isUserHasSomeViewAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`isValidEmailString()`](Piwik/Piwik.md#isValidEmailString) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`install()`](Piwik/Plugin.md#install) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`isTheme()`](Piwik/Plugin.md#isTheme) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`isPluginActivated()`](Piwik/Plugin/Manager.md#isPluginActivated) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`isPluginLoaded()`](Piwik/Plugin/Manager.md#isPluginLoaded) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`isViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#isViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`isRequestingSingleDataTable()`](Piwik/Plugin/ViewDataTable.md#isRequestingSingleDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`isEmpty()`](Piwik/Segment.md#isEmpty) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
- [`isSegmentationEnabled()`](Piwik/SettingsPiwik.md#isSegmentationEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
- [`isUniqueVisitorsEnabled()`](Piwik/SettingsPiwik.md#isUniqueVisitorsEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
- [`isArchivePhpTriggered()`](Piwik/SettingsServer.md#isArchivePhpTriggered) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`isIIS()`](Piwik/SettingsServer.md#isIIS) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`isApache()`](Piwik/SettingsServer.md#isApache) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`isWindows()`](Piwik/SettingsServer.md#isWindows) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`isTimezoneSupportEnabled()`](Piwik/SettingsServer.md#isTimezoneSupportEnabled) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`isGdExtensionEnabled()`](Piwik/SettingsServer.md#isGdExtensionEnabled) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
- [`$infoSites()`](Piwik/Site.md#$infoSites) &mdash; _Property in class_ [`Site`](Piwik/Site.md)
- [`isEcommerceEnabled()`](Piwik/Site.md#isEcommerceEnabled) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`isSiteSearchEnabled()`](Piwik/Site.md#isSiteSearchEnabled) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`isEcommerceEnabledFor()`](Piwik/Site.md#isEcommerceEnabledFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`isSiteSearchEnabledFor()`](Piwik/Site.md#isSiteSearchEnabledFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`isTaskBeingExecuted()`](Piwik/TaskScheduler.md#isTaskBeingExecuted) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
- [`isLocalUrl()`](Piwik/Url.md#isLocalUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`isDefined()`](Piwik/WidgetsList.md#isDefined) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)

### L

- [`LogAggregator`](Piwik/DataAccess/LogAggregator.md) &mdash; _Class in namespace_ [`Piwik\DataAccess`](Piwik/DataAccess)
- [`Limit`](Piwik/DataTable/Filter/Limit.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`$lockPrivilegeGranted()`](Piwik/Db.md#$lockPrivilegeGranted) &mdash; _Property in class_ [`Db`](Piwik/Db.md)
- [`lockTables()`](Piwik/Db.md#lockTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`long2ip()`](Piwik/IP.md#long2ip) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`Log`](Piwik/Log.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)

### M

- [`mb_substr()`](Piwik/Common.md#mb_substr) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`mb_strlen()`](Piwik/Common.md#mb_strlen) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`mb_strtolower()`](Piwik/Common.md#mb_strtolower) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`makeFromIndexedArray()`](Piwik/DataTable.md#makeFromIndexedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`mergeSubtables()`](Piwik/DataTable.md#mergeSubtables) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`makeFromSimpleArray()`](Piwik/DataTable.md#makeFromSimpleArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`MetadataCallbackReplace`](Piwik/DataTable/Filter/MetadataCallbackReplace.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`match()`](Piwik/DataTable/Filter/Pattern.md#match) &mdash; _Method in class_ [`Pattern`](Piwik/DataTable/Filter/Pattern.md)
- [`Map`](Piwik/DataTable/Map.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
- [`mergeChildren()`](Piwik/DataTable/Map.md#mergeChildren) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`mergeSubtables()`](Piwik/DataTable/Map.md#mergeSubtables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`$maxVisitsSummed()`](Piwik/DataTable/Row.md#$maxVisitsSummed) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
- [`mkdir()`](Piwik/Filesystem.md#mkdir) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
- [`Mail`](Piwik/Mail.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`MenuAbstract`](Piwik/Menu/MenuAbstract.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
- [`MenuAdmin`](Piwik/Menu/MenuAdmin.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
- [`MenuMain`](Piwik/Menu/MenuMain.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
- [`MenuTop`](Piwik/Menu/MenuTop.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
- [`Metrics`](Piwik/Metrics.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`$mappingFromIdToName()`](Piwik/Metrics.md#$mappingFromIdToName) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
- [`$mappingFromIdToNameGoal()`](Piwik/Metrics.md#$mappingFromIdToNameGoal) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
- [`$mappingFromNameToId()`](Piwik/Metrics.md#$mappingFromNameToId) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
- [`MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`makePeriodFromQueryParams()`](Piwik/Period.md#makePeriodFromQueryParams) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`Manager`](Piwik/Plugin/Manager.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
- [`$methodName()`](Piwik/ScheduledTask.md#$methodName) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`$methodParameter()`](Piwik/ScheduledTask.md#$methodParameter) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`Monthly`](Piwik/ScheduledTime/Monthly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)

### N

- [`naturalSort()`](Piwik/DataTable/Filter/Sort.md#naturalSort) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`now()`](Piwik/Date.md#now) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`N2P()`](Piwik/IP.md#N2P) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`Nonce`](Piwik/Nonce.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)

### O

- [`optimizeTables()`](Piwik/Db.md#optimizeTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`Option`](Piwik/Option.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`$objectInstance()`](Piwik/ScheduledTask.md#$objectInstance) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)

### P

- [`process()`](Piwik/API/Request.md#process) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`processRequest()`](Piwik/API/Request.md#processRequest) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`Period`](Piwik/ArchiveProcessor/Period.md) &mdash; _Class in namespace_ [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
- [`prefixTable()`](Piwik/Common.md#prefixTable) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`prependPlusSignToNumber()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#prependPlusSignToNumber) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
- [`Pattern`](Piwik/DataTable/Filter/Pattern.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`PatternRecursive`](Piwik/DataTable/Filter/PatternRecursive.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`P2N()`](Piwik/IP.md#P2N) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`prettyPrint()`](Piwik/IP.md#prettyPrint) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`Period`](Piwik/Period.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`parseDateRange()`](Piwik/Period/Range.md#parseDateRange) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`Piwik`](Piwik/Piwik.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`postEvent()`](Piwik/Piwik.md#postEvent) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`Plugin`](Piwik/Plugin.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`postLoad()`](Piwik/Plugin.md#postLoad) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`partitionResultIntoMultipleGroups()`](Piwik/RankingQuery.md#partitionResultIntoMultipleGroups) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`$priority()`](Piwik/ScheduledTask.md#$priority) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)

### Q

- [`queryVisitsByDimension()`](Piwik/DataAccess/LogAggregator.md#queryVisitsByDimension) &mdash; _Method in class_ [`LogAggregator`](Piwik/DataAccess/LogAggregator.md)
- [`queueFilter()`](Piwik/DataTable.md#queueFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`queueFilter()`](Piwik/DataTable/Map.md#queueFilter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`query()`](Piwik/Db.md#query) &mdash; _Method in class_ [`Db`](Piwik/Db.md)

### R

- [`Request`](Piwik/API/Request.md) &mdash; _Class in namespace_ [`Piwik\API`](Piwik/API)
- [`renameModule()`](Piwik/API/Request.md#renameModule) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`reloadAuthUsingTokenAuth()`](Piwik/API/Request.md#reloadAuthUsingTokenAuth) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`renameColumn()`](Piwik/DataTable.md#renameColumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`ReplaceColumnNames`](Piwik/DataTable/Filter/ReplaceColumnNames.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`ReplaceSummaryRowLabel`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`renameColumn()`](Piwik/DataTable/Map.md#renameColumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`Row`](Piwik/DataTable/Row.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
- [`renameColumn()`](Piwik/DataTable/Row.md#renameColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`removeSubtable()`](Piwik/DataTable/Row.md#removeSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`releaseDbLock()`](Piwik/Db.md#releaseDbLock) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`Range`](Piwik/Period/Range.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
- [`redirectToModule()`](Piwik/Piwik.md#redirectToModule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`redirectToIndex()`](Piwik/Plugin/Controller.md#redirectToIndex) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`returnLoadedPluginsInfo()`](Piwik/Plugin/Manager.md#returnLoadedPluginsInfo) &mdash; _Method in class_ [`Manager`](Piwik/Plugin/Manager.md)
- [`$requestConfig()`](Piwik/Plugin/ViewDataTable.md#$requestConfig) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`render()`](Piwik/Plugin/ViewDataTable.md#render) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`RankingQuery`](Piwik/RankingQuery.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`removeAllUserSettingsForUser()`](Piwik/Settings/UserSetting.md#removeAllUserSettingsForUser) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
- [`runTasks()`](Piwik/TaskScheduler.md#runTasks) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
- [`redirectToReferrer()`](Piwik/Url.md#redirectToReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`redirectToUrl()`](Piwik/Url.md#redirectToUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
- [`render()`](Piwik/View.md#render) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`renderReport()`](Piwik/ViewDataTable/Factory.md#renderReport) &mdash; _Method in class_ [`Factory`](Piwik/ViewDataTable/Factory.md)
- [`remove()`](Piwik/WidgetsList.md#remove) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)

### S

- [`shouldLoadExpanded()`](Piwik/API/Request.md#shouldLoadExpanded) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`sanitizeInputValues()`](Piwik/Common.md#sanitizeInputValues) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`sort()`](Piwik/DataTable.md#sort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`setMaximumDepthLevelAllowedAtLeast()`](Piwik/DataTable.md#setMaximumDepthLevelAllowedAtLeast) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`setMetadata()`](Piwik/DataTable.md#setMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`setMetadataValues()`](Piwik/DataTable.md#setMetadataValues) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`setAllTableMetadata()`](Piwik/DataTable.md#setAllTableMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`setMaximumAllowedRows()`](Piwik/DataTable.md#setMaximumAllowedRows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`Sort`](Piwik/DataTable/Filter/Sort.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`setOrder()`](Piwik/DataTable/Filter/Sort.md#setOrder) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`sort()`](Piwik/DataTable/Filter/Sort.md#sort) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`sortString()`](Piwik/DataTable/Filter/Sort.md#sortString) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`setKeyName()`](Piwik/DataTable/Map.md#setKeyName) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`sumSubtable()`](Piwik/DataTable/Row.md#sumSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`setSubtable()`](Piwik/DataTable/Row.md#setSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`setColumns()`](Piwik/DataTable/Row.md#setColumns) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`setColumn()`](Piwik/DataTable/Row.md#setColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`setMetadata()`](Piwik/DataTable/Row.md#setMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`sumRow()`](Piwik/DataTable/Row.md#sumRow) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`sumRowMetadata()`](Piwik/DataTable/Row.md#sumRowMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`Simple`](Piwik/DataTable/Simple.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
- [`setTimezone()`](Piwik/Date.md#setTimezone) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`setTime()`](Piwik/Date.md#setTime) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`setDay()`](Piwik/Date.md#setDay) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`setYear()`](Piwik/Date.md#setYear) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subDay()`](Piwik/Date.md#subDay) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subWeek()`](Piwik/Date.md#subWeek) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subMonth()`](Piwik/Date.md#subMonth) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subYear()`](Piwik/Date.md#subYear) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subHour()`](Piwik/Date.md#subHour) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`subPeriod()`](Piwik/Date.md#subPeriod) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`secondsToDays()`](Piwik/Date.md#secondsToDays) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`segmentedFetchFirst()`](Piwik/Db.md#segmentedFetchFirst) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`segmentedFetchOne()`](Piwik/Db.md#segmentedFetchOne) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`segmentedFetchAll()`](Piwik/Db.md#segmentedFetchAll) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`segmentedQuery()`](Piwik/Db.md#segmentedQuery) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`sendHttpRequest()`](Piwik/Http.md#sendHttpRequest) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
- [`sanitizeIp()`](Piwik/IP.md#sanitizeIp) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`sanitizeIpRange()`](Piwik/IP.md#sanitizeIpRange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
- [`setFrom()`](Piwik/Mail.md#setFrom) &mdash; _Method in class_ [`Mail`](Piwik/Mail.md)
- [`set()`](Piwik/Option.md#set) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
- [`setDefaultEndDate()`](Piwik/Period/Range.md#setDefaultEndDate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`shouldArchive()`](Piwik/Plugin/Archiver.md#shouldArchive) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
- [`setHostValidationVariablesView()`](Piwik/Plugin/Controller.md#setHostValidationVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`setPeriodVariablesView()`](Piwik/Plugin/Controller.md#setPeriodVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`setBasicVariablesAdminView()`](Piwik/Plugin/ControllerAdmin.md#setBasicVariablesAdminView) &mdash; _Method in class_ [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md)
- [`setDataTable()`](Piwik/Plugin/ViewDataTable.md#setDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`setLimit()`](Piwik/RankingQuery.md#setLimit) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`setOthersLabel()`](Piwik/RankingQuery.md#setOthersLabel) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`setColumnToMarkExcludedRows()`](Piwik/RankingQuery.md#setColumnToMarkExcludedRows) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`ScheduledTask`](Piwik/ScheduledTask.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`$scheduledTime()`](Piwik/ScheduledTask.md#$scheduledTime) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`setDay()`](Piwik/ScheduledTime/Daily.md#setDay) &mdash; _Method in class_ [`Daily`](Piwik/ScheduledTime/Daily.md)
- [`setHour()`](Piwik/ScheduledTime/Hourly.md#setHour) &mdash; _Method in class_ [`Hourly`](Piwik/ScheduledTime/Hourly.md)
- [`setDay()`](Piwik/ScheduledTime/Hourly.md#setDay) &mdash; _Method in class_ [`Hourly`](Piwik/ScheduledTime/Hourly.md)
- [`setDay()`](Piwik/ScheduledTime/Monthly.md#setDay) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
- [`setDayOfWeek()`](Piwik/ScheduledTime/Monthly.md#setDayOfWeek) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
- [`setDay()`](Piwik/ScheduledTime/Weekly.md#setDay) &mdash; _Method in class_ [`Weekly`](Piwik/ScheduledTime/Weekly.md)
- [`Segment`](Piwik/Segment.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`SettingsServer`](Piwik/SettingsServer.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`SystemSetting`](Piwik/Settings/SystemSetting.md) &mdash; _Class in namespace_ [`Piwik\Settings`](Piwik/Settings)
- [`setUserLogin()`](Piwik/Settings/UserSetting.md#setUserLogin) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
- [`Singleton`](Piwik/Singleton.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`setSingletonInstance()`](Piwik/Singleton.md#setSingletonInstance) &mdash; _Method in class_ [`Singleton`](Piwik/Singleton.md)
- [`Site`](Piwik/Site.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`setSites()`](Piwik/Site.md#setSites) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`setSitesFromArray()`](Piwik/Site.md#setSitesFromArray) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`setContentType()`](Piwik/View.md#setContentType) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`setXFrameOptions()`](Piwik/View.md#setXFrameOptions) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`singleReport()`](Piwik/View.md#singleReport) &mdash; _Method in class_ [`View`](Piwik/View.md)

### T

- [`Truncate`](Piwik/DataTable/Filter/Truncate.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`toString()`](Piwik/Date.md#toString) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`today()`](Piwik/Date.md#today) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`toString()`](Piwik/Period.md#toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`translate()`](Piwik/Piwik.md#translate) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`translateException()`](Piwik/Piwik.md#translateException) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
- [`TaskScheduler`](Piwik/TaskScheduler.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)

### U

- [`unprefixTable()`](Piwik/Common.md#unprefixTable) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`unsanitizeInputValues()`](Piwik/Common.md#unsanitizeInputValues) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
- [`unlockAllTables()`](Piwik/Db.md#unlockAllTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
- [`unlinkRecursive()`](Piwik/Filesystem.md#unlinkRecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
- [`uninstall()`](Piwik/Plugin.md#uninstall) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`UserSetting`](Piwik/Settings/UserSetting.md) &mdash; _Class in namespace_ [`Piwik\Settings`](Piwik/Settings)
- [`unsetInstance()`](Piwik/Singleton.md#unsetInstance) &mdash; _Method in class_ [`Singleton`](Piwik/Singleton.md)
- [`Url`](Piwik/Url.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`UrlHelper`](Piwik/UrlHelper.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)

### V

- [`verbose()`](Piwik/Log.md#verbose) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
- [`verifyNonce()`](Piwik/Nonce.md#verifyNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
- [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
- [`Visualization`](Piwik/Plugin/Visualization.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
- [`Version`](Piwik/Version.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
- [`View`](Piwik/View.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)

### W

- [`walkPath()`](Piwik/DataTable.md#walkPath) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`warning()`](Piwik/Log.md#warning) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
- [`Weekly`](Piwik/ScheduledTime/Weekly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
- [`WidgetsList`](Piwik/WidgetsList.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)

### Y

- [`yesterday()`](Piwik/Date.md#yesterday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`yesterdaySameTime()`](Piwik/Date.md#yesterdaySameTime) &mdash; _Method in class_ [`Date`](Piwik/Date.md)

### _

- [`__construct()`](Piwik/API/Request.md#__construct) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
- [`__get()`](Piwik/Config.md#__get) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
- [`__set()`](Piwik/Config.md#__set) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
- [`__construct()`](Piwik/DataTable.md#__construct) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`__destruct()`](Piwik/DataTable.md#__destruct) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`__sleep()`](Piwik/DataTable.md#__sleep) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`__toString()`](Piwik/DataTable.md#__toString) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
- [`__construct()`](Piwik/DataTable/Filter.md#__construct) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
- [`__construct()`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md#__construct) &mdash; _Method in class_ [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md)
- [`__construct()`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md#__construct) &mdash; _Method in class_ [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md)
- [`__construct()`](Piwik/DataTable/Filter/AddSummaryRow.md#__construct) &mdash; _Method in class_ [`AddSummaryRow`](Piwik/DataTable/Filter/AddSummaryRow.md)
- [`__construct()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#__construct) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
- [`__construct()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#__construct) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
- [`__construct()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#__construct) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md#__construct) &mdash; _Method in class_ [`ColumnCallbackAddColumn`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md)
- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md#__construct) &mdash; _Method in class_ [`ColumnCallbackAddColumnQuotient`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md)
- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md#__construct) &mdash; _Method in class_ [`ColumnCallbackAddMetadata`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md)
- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md#__construct) &mdash; _Method in class_ [`ColumnCallbackDeleteRow`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md)
- [`__construct()`](Piwik/DataTable/Filter/ColumnDelete.md#__construct) &mdash; _Method in class_ [`ColumnDelete`](Piwik/DataTable/Filter/ColumnDelete.md)
- [`__construct()`](Piwik/DataTable/Filter/ExcludeLowPopulation.md#__construct) &mdash; _Method in class_ [`ExcludeLowPopulation`](Piwik/DataTable/Filter/ExcludeLowPopulation.md)
- [`__construct()`](Piwik/DataTable/Filter/GroupBy.md#__construct) &mdash; _Method in class_ [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md)
- [`__construct()`](Piwik/DataTable/Filter/Limit.md#__construct) &mdash; _Method in class_ [`Limit`](Piwik/DataTable/Filter/Limit.md)
- [`__construct()`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md#__construct) &mdash; _Method in class_ [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md)
- [`__construct()`](Piwik/DataTable/Filter/MetadataCallbackReplace.md#__construct) &mdash; _Method in class_ [`MetadataCallbackReplace`](Piwik/DataTable/Filter/MetadataCallbackReplace.md)
- [`__construct()`](Piwik/DataTable/Filter/Pattern.md#__construct) &mdash; _Method in class_ [`Pattern`](Piwik/DataTable/Filter/Pattern.md)
- [`__construct()`](Piwik/DataTable/Filter/PatternRecursive.md#__construct) &mdash; _Method in class_ [`PatternRecursive`](Piwik/DataTable/Filter/PatternRecursive.md)
- [`__construct()`](Piwik/DataTable/Filter/ReplaceColumnNames.md#__construct) &mdash; _Method in class_ [`ReplaceColumnNames`](Piwik/DataTable/Filter/ReplaceColumnNames.md)
- [`__construct()`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md#__construct) &mdash; _Method in class_ [`ReplaceSummaryRowLabel`](Piwik/DataTable/Filter/ReplaceSummaryRowLabel.md)
- [`__construct()`](Piwik/DataTable/Filter/Sort.md#__construct) &mdash; _Method in class_ [`Sort`](Piwik/DataTable/Filter/Sort.md)
- [`__construct()`](Piwik/DataTable/Filter/Truncate.md#__construct) &mdash; _Method in class_ [`Truncate`](Piwik/DataTable/Filter/Truncate.md)
- [`__toString()`](Piwik/DataTable/Map.md#__toString) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
- [`__construct()`](Piwik/DataTable/Row.md#__construct) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`__sleep()`](Piwik/DataTable/Row.md#__sleep) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`__destruct()`](Piwik/DataTable/Row.md#__destruct) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`__toString()`](Piwik/DataTable/Row.md#__toString) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
- [`__toString()`](Piwik/Date.md#__toString) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
- [`__construct()`](Piwik/Mail.md#__construct) &mdash; _Method in class_ [`Mail`](Piwik/Mail.md)
- [`__construct()`](Piwik/Period.md#__construct) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`__toString()`](Piwik/Period.md#__toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
- [`__construct()`](Piwik/Period/Range.md#__construct) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
- [`__construct()`](Piwik/Plugin.md#__construct) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
- [`__construct()`](Piwik/Plugin/Archiver.md#__construct) &mdash; _Method in class_ [`Archiver`](Piwik/Plugin/Archiver.md)
- [`__construct()`](Piwik/Plugin/Controller.md#__construct) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
- [`__construct()`](Piwik/Plugin/ViewDataTable.md#__construct) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
- [`__construct()`](Piwik/Plugin/Visualization.md#__construct) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
- [`__construct()`](Piwik/RankingQuery.md#__construct) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
- [`__construct()`](Piwik/ScheduledTask.md#__construct) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
- [`__construct()`](Piwik/Segment.md#__construct) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
- [`__construct()`](Piwik/Settings/SystemSetting.md#__construct) &mdash; _Method in class_ [`SystemSetting`](Piwik/Settings/SystemSetting.md)
- [`__construct()`](Piwik/Settings/UserSetting.md#__construct) &mdash; _Method in class_ [`UserSetting`](Piwik/Settings/UserSetting.md)
- [`__construct()`](Piwik/Site.md#__construct) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`__toString()`](Piwik/Site.md#__toString) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
- [`__construct()`](Piwik/View.md#__construct) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`__set()`](Piwik/View.md#__set) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`__get()`](Piwik/View.md#__get) &mdash; _Method in class_ [`View`](Piwik/View.md)
- [`_reset()`](Piwik/WidgetsList.md#_reset) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)
